Moved BootstrapClassLoader. Use a BootstrapClassLoader also from PreLauncher - should work in theory also if you didn't launch with -Djava.system.class.loader=net.sf.taverna.raven.prelauncher.BootstrapClassLoader  as the plugin manager etc. can add to the PARENT class loader instead.
(Some frameworks specificly does getSystemClassLoader() and would not work without the java.system.class.loader trick)

Use PreLauncher.addURLToClassPath()  instead of the old instanceof BootstrapClassLoader trick


git-svn-id: http://taverna.googlecode.com/svn@5463 bf327186-88b3-11dd-a302-d386e5130c1c